image and link to article working

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <style>
       h1, p, * {
       font-family: sans-serif;
-      color: #a28089;
+      color: #4B1B2A;
       }
 
       html {
@@ -48,6 +48,7 @@
    </head>
    <body>
       <h1>Guardian News</h1>
+      <button id="refresh-news-button">Refresh news</button></br>
       <div id="main-container"></div>
   <script src="bundle.js"></script>
   </body>
