search feature working

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
    </head>
    <body>
       <h1>Guardian News</h1>
+      <input type="text" id="search-term" /></div></br>
+      <button id="search-news-button">search news</button>
       <button id="refresh-news-button">Refresh news</button></br>
       <div id="main-container"></div>
   <script src="bundle.js"></script>
