making search feature not case sensitive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h1>Guardian News</h1>
       <input type="text" id="search-term" /></div></br>
       <button id="search-news-button">search news</button>
-      <button id="refresh-news-button">Refresh news</button></br>
+      <button id="refresh-news-button">refresh news</button></br>
       <div id="main-container"></div>
   <script src="bundle.js"></script>
   </body>
